AM_CFLAGS = -Wall -Wextra -pedantic -std=c99 -Wno-gnu-binary-literal -Os
AM_CXXFLAGS = -Wall -Wextra -pedantic -std=c++11 -Wno-gnu-binary-literal -Os

bin_PROGRAMS = utfdecode

utfdecode_SOURCES = utfdecode.cpp

dist_man1_MANS = utfdecode.1

# Installs the files in $PREFIX/share/$pkgname/
#dist_pkgdata_DATA = data/UnicodeData.txt data/Blocks.txt
#AM_CPPFLAGS = -DDATADIR=\"$(pkgdatadir)\"
